--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,8 @@
   <button class="add-new-button" mat-button (click)="addPoll()" title="Create new poll">
     <mat-icon>add</mat-icon>
   </button>
-  <span class="application-name" (click)="goToRoot()">Poll-A-Lot</span>
+  <!-- <span class="application-name" (click)="goToRoot()">Poll-A-Lot</span> -->
+  <img class="application-name" (click)="goToRoot()" [src]="'/assets/poll-a-lot.png'"/>
 
   <mat-menu #appMenu="matMenu">
     <ng-container *ngIf="nightMode$ | async as nightMode">
@@ -28,7 +29,7 @@
         </button>
       </ng-container>
   </mat-menu>
-  <button mat-icon-button [matMenuTriggerFor]="appMenu" aria-label="Menu">
+  <button class="navigation-menu" mat-icon-button [matMenuTriggerFor]="appMenu" aria-label="Menu">
     <mat-icon>menu</mat-icon>
   </button>
   
