--- a/src/app/movie-poll-item/movie-poll-item.component.scss
+++ b/src/app/movie-poll-item/movie-poll-item.component.scss
@@ -32,16 +32,20 @@
     padding-top: 17px;
   }
 
+  $posterHeight: min(35vmin, 154px);
+  $posterWidth: calc(2 / 3 * $posterHeight);
+
   .poster {
-    $height: 130px;
-    height: $height;
-    width: 2/3 * $height;
+    height: $posterHeight;
+    width: $posterWidth;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
     margin-bottom: 19px;
   }
 
   .title {
     line-height: 0.95em;
+    font-size: 1.2em;
+    padding-bottom: 5px;
   }
 
   .movie-info {
@@ -61,12 +65,13 @@
       display: flex;
       align-items: center;
       width: 100%;
+      padding-bottom: 7px;
     }
   }
 
   .year,
   .runtime {
-    font-size: 0.6em;
+    font-size: 0.75em;
   }
 
   .separator {
@@ -153,8 +158,8 @@
     width: 100%;
     text-align: center;
     color: #ccc;
-    padding-bottom: 9px;
-    padding-top: 7px;
+    padding-bottom: 10px;
+    padding-top: 9px;
   }
 
   .bg {
@@ -188,7 +193,7 @@
 
     min-height: 14px;
     margin-left: -16px;
-    padding: 0 46px 8px 4px;
+    padding: 0 55px 12px 4px;
     margin-right: -16px;
     margin-bottom: -10px;
     border-bottom-left-radius: 4px;
@@ -201,18 +206,19 @@
     }
 
     .reaction {
-      height: 17px;
-      font-size: 10px;
+      min-height: 26px;
       display: flex;
       justify-content: center;
       align-items: center;
-      padding: 2px 7px;
+      padding: 1px 9px;
       border-radius: 9999px;
       min-width: 27px;
-      margin-top: 2px;
+      font-size: 17px;
+      margin-top: 5px;
       // box-shadow: inset 1px 1px 2px 0px #0000001f;
       color: #58565a;
       background: #ffffffe8;
+      user-select: none;
 
       &.unreacted {
         filter: grayscale(100%) opacity(0.5);
@@ -221,7 +227,7 @@
 
       .label {
         position: relative;
-        bottom: 0;
+        bottom: 1px;
       }
 
       &.has-reacted {
@@ -252,6 +258,7 @@
 
       .count {
         margin-left: 7px;
+        font-size: 15px;
       }
     }
   }
@@ -263,37 +270,64 @@
     position: absolute;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
-    top: 147px;
-    width: 87px;
+    top: $posterHeight;
+    width: $posterWidth;
     font-size: 17px;
     padding: 0 0 4px;
-    height: 27px;
-    background: #ffffff99;
-    box-shadow: 1px 1px 11px 0px #00000026;
+    box-shadow: 1px 1px 11px 0px #0000000f;
+    background-image: linear-gradient(0deg, #484747 75%, transparent);
+    background-position-y: 65px;
+    background-size: calc($posterWidth + 20px) 66px;
+    max-height: 100px;
+    transition: max-height 0.6s ease;
 
     .reaction {
       position: relative;
+      user-select: none;
+      padding: 4px 0;
+      transition: all 0.6s ease;
+      display: flex;
+      flex-direction: column;
+      margin-bottom: auto;
+      align-items: center;
     }
 
     .fa-solid {
       position: relative;
       z-index: 1;
+      text-shadow: 0 0 4px #5e5e5e4a;
+    }
+
+    .reacted .count {
+      background-image: linear-gradient(7deg, #bb59e3 0%, #64d3e3 100%);
     }
 
     .count {
-      font-size: 10px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      border-radius: 9999px;
-      width: 15px;
-      position: absolute;
-      top: 13px;
-      right: -6px;
-      // color: white;
-      box-shadow: 1px 1px 1px 0 #717fe8;
-      // background-color: #d1c6e0;
-      color: #58565a;
+      &.has-votes {
+        font-size: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 9999px;
+        // background-image: linear-gradient(7deg, #bb59e3 0%, #64d3e3 100%);
+        color: white;
+        min-width: 3ch;
+        height: 12px;
+        opacity: 1;
+        margin-top: 3px;
+      }
+    }
+
+    &:not(.open) {
+      background-position-y: 0;
+
+      .reaction {
+        max-height: 17px;
+      }
+
+      .count {
+        opacity: 0;
+      }
     }
   }
 
@@ -357,35 +391,46 @@
 
   .available-reactions {
     position: absolute;
-    bottom: 8px;
+    bottom: 10px;
     right: 13px;
+    width: 35px;
     background-color: #ffffffd4;
-    border-radius: 33px;
+    border-radius: 99999px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    max-height: 22px;
-    overflow: hidden;
+    max-height: 35px;
+    min-height: 35px;
+    overflow-y: hidden;
     transition: max-height ease 0.5s, background-color ease 0.3s;
     justify-content: flex-end;
 
+    & .scroll {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
     & .scroll > *:not(:last-child) {
-      margin-bottom: 1px;
-      font-size: 13px;
-      width: 16px;
+      margin-bottom: 9px;
+      font-size: 23px;
       position: relative;
-      left: 4px;
+      user-select: none;
+      z-index: 1;
     }
 
     .add-btn {
       color: #ccc;
-      bottom: -5px;
+      bottom: 6px;
+      margin-top: 2px;
       position: relative;
+      user-select: none;
     }
 
     &.open {
-      max-height: 120px;
+      max-height: 160px;
       background-color: white;
       padding-top: 5px;
 
@@ -410,4 +455,15 @@
 .hidden-scrollbar {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
+}
+
+.tagline {
+  font-style: italic;
+  font-size: 0.77em;
+  color: #494949;
+  margin-bottom: 10px;
+}
+
+.with-launch-icon {
+  margin: 0 3px;
 }
