--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,7 @@
     <mat-icon>add</mat-icon>
   </button>
   <!-- <span class="application-name" (click)="goToRoot()">Poll-A-Lot</span> -->
-  <img class="application-name" (click)="goToRoot()" [src]="'/assets/poll-a-lot.png'"/>
+  <img class="application-name" (click)="goToRoot()" [src]="'/assets/poll-a-lot.svg'"/>
 
   <mat-menu #appMenu="matMenu">
     <ng-container *ngIf="nightMode$ | async as nightMode">
