--- a/src/app/movie-poll-item/movie-poll-item.component.scss
+++ b/src/app/movie-poll-item/movie-poll-item.component.scss
@@ -193,7 +193,7 @@
 
     min-height: 14px;
     margin-left: -16px;
-    padding: 0 55px 12px 4px;
+    padding: 0 61px 16px 4px;
     margin-right: -16px;
     margin-bottom: -10px;
     border-bottom-left-radius: 4px;
@@ -394,6 +394,7 @@
     bottom: 10px;
     right: 13px;
     width: 35px;
+    padding: 3px 3px;
     background-color: #ffffffd4;
     border-radius: 99999px;
     display: flex;
@@ -419,6 +420,7 @@
       position: relative;
       user-select: none;
       z-index: 1;
+      width: 31px;
     }
 
     .add-btn {
