--- a/src/app/poll-management/poll-management.component.scss
+++ b/src/app/poll-management/poll-management.component.scss
@@ -1,76 +1,83 @@
 .poll {
+  display: flex;
+  flex-direction: column;
+  padding: 10px 16px;
+  margin-bottom: 10px;
+
+  & > div:first-child {
     display: flex;
-    flex-direction: column;
-    padding: 10px 16px;
-    margin-bottom: 10px;
+    justify-content: space-between;
+    align-items: center;
+  }
 
-    & > div:first-child {
+  h2 {
+    margin: 0;
+  }
+
+  .controls {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    // position: absolute;
+    // right: 10px;
+    // top: 50%;
+    // -webkit-transform: translate(0, -50%);
+    // transform: translate(0, -50%);
+
+    & > * {
+      padding: 10px;
+
+      &:last-of-type {
+        padding-right: 0;
+      }
+    }
+  }
+
+  .poll-options {
+    width: 100%;
+    font-size: 0.9em;
+    padding-left: 1px;
+    padding-right: 10px;
+
+    .poll-option {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      .voters {
         display: flex;
-        justify-content: space-between;
         align-items: center;
-    }
 
-    h2 {
-        margin: 0;
-    }
-
-    .controls {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        // position: absolute;
-        // right: 10px;
-        // top: 50%;
-        // -webkit-transform: translate(0, -50%);
-        // transform: translate(0, -50%);
-
-        & > * {
-            padding: 10px;
-
-            &:last-of-type {
-                padding-right: 0;
-            }
+        .count {
+          padding: 3px;
         }
-    }
 
-    .poll-options {
-        width: 100%;
-        font-size: 0.9em;
-        padding-left: 1px;
-        padding-right: 10px;
-
-        .poll-option {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-
-            .voters {
-                display: flex;
-                align-items: center;
-
-                .count {
-                    padding: 3px;
-                }
-
-                .material-icons {
-                    font-size: 20px;
-                    line-height: 23px;
-                }
-            }
-
-            &:not(:last-child) {
-                border-bottom: 1px solid #ccc;
-            }
+        .material-icons {
+          font-size: 20px;
+          line-height: 23px;
         }
+      }
+
+      &:not(:last-child) {
+        border-bottom: 1px solid #ccc;
+      }
     }
+  }
 }
 
 .title {
-    font-family: 'Product Sans';
-    font-size: 20px;
-    padding-top: 12px;
-    padding-bottom: 12px;
-    margin-bottom: 10px;
-    margin-top: 10px;
-    text-align: center;
+  font-family: "Product Sans";
+  font-size: 20px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  text-align: center;
+}
+
+.secondary {
+  text-transform: uppercase;
+  font-size: 0.8em;
+  text-align: center;
+  color: #767676;
 }
