--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 @font-face {
-    font-family: "Product Sans";
-    src: url("assets/fonts/Product-Sans-Regular.ttf");
+  font-family: "Product Sans";
+  src: url("assets/fonts/Product-Sans-Regular.ttf");
 }
 
 @font-face {
-    font-family: "Product Sans Bold";
-    src: url("assets/fonts/Product-Sans-Bold.ttf");
+  font-family: "Product Sans Bold";
+  src: url("assets/fonts/Product-Sans-Bold.ttf");
 }
 
 $light-bg-image: linear-gradient(-20deg, #d9c6ee 0%, #5987e5 100%);
@@ -34,14 +34,15 @@ html {
       }
     }
 
-    .footer, .disclaimer {
+    .footer,
+    .disclaimer {
       color: #ccc;
     }
   }
 }
 
 body {
-  font-family: 'Product Sans';
+  font-family: "Product Sans";
 
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -49,7 +50,8 @@ body {
   overscroll-behavior-y: none;
 }
 
-html, body {
+html,
+body {
   // min-height: 100vh;
   padding: 0;
   margin: 0;
@@ -59,22 +61,26 @@ header {
   padding-top: 8px;
 }
 
-h1, h2, h3, h4, label {
-    font-family: 'Product Sans Bold';
+h1,
+h2,
+h3,
+h4,
+label {
+  font-family: "Product Sans Bold";
 }
 
 .mat-card.option-card {
-    font-family: 'Product Sans';
-    font-size: 1.2em;
-    padding-top: 12px;
-    padding-bottom: 12px;
+  font-family: "Product Sans";
+  font-size: 1.2em;
+  padding-top: 12px;
+  padding-bottom: 12px;
 
-    position: relative;
-    padding: 10px 16px;
+  position: relative;
+  padding: 10px 16px;
 
-    h2 {
-        margin-bottom: 0;
-    }
+  h2 {
+    margin-bottom: 0;
+  }
 }
 
 .option-card {
@@ -85,9 +91,10 @@ h1, h2, h3, h4, label {
   transition: transform 1s;
 }
 
-.mat-button, .mat-raised-button {
-    font-family: 'Product Sans' !important;
-    font-size: 20px;
+.mat-button,
+.mat-raised-button {
+  font-family: "Product Sans" !important;
+  font-size: 20px;
 }
 
 .login-card {
@@ -114,7 +121,7 @@ h1, h2, h3, h4, label {
   height: 5vh;
   width: 5vh;
   border: 6px solid rgba(255, 255, 255, 0.6);
-  border-top-color: rgba(255, 255, 255, 1.0);
+  border-top-color: rgba(255, 255, 255, 1);
   border-radius: 100%;
   animation: rotation 0.6s infinite linear 0.25s;
 
@@ -124,9 +131,11 @@ h1, h2, h3, h4, label {
 
 .spinner-bg {
   position: fixed;
-  top: 0;
-  height: 100vh;
   width: 100vw;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   background: $light-bg-image;
   opacity: 0.8;
   display: flex;
@@ -153,17 +162,17 @@ h1, h2, h3, h4, label {
 $max-width: 556px;
 
 @media screen and (min-width: $max-width) {
-    .page-container {
-        width: calc(556px - 16px);
-        position: absolute;
-        left: 50%;
-        transform: translate(-50%, 0);
-    }
+  .page-container {
+    width: calc(556px - 16px);
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, 0);
+  }
 
-    .spinner-bg {
-      right: 50%;
-      transform: translate(50%,0);
-    }
+  .spinner-bg {
+    right: 50%;
+    transform: translate(50%, 0);
+  }
 }
 
 .md-16 {
@@ -181,8 +190,8 @@ $max-width: 556px;
   color: #ccc;
 
   &::before {
-    content: 'create';
-    font-family: 'Material Icons';
+    content: "create";
+    font-family: "Material Icons";
     padding-right: 3px;
   }
 }
@@ -207,8 +216,8 @@ $max-width: 556px;
   padding: 2px 7px;
 
   &::after {
-    content: 'launch';
-    font-family: 'Material Icons';
+    content: "launch";
+    font-family: "Material Icons";
     font-weight: normal;
     font-style: normal;
     font-size: 12px;
@@ -220,12 +229,11 @@ $max-width: 556px;
     white-space: nowrap;
     word-wrap: normal;
     direction: ltr;
-    -webkit-font-feature-settings: 'liga';
+    -webkit-font-feature-settings: "liga";
     -webkit-font-smoothing: antialiased;
   }
-  
+
   a {
     color: white;
   }
-
 }
